# reqif-rs

./: Cargo.toml  README.md  out.reqif
.github/workflows/: publish.yml  rust.yml
src/: lib.rs  req_if.rs
