[package]
name = "reqif-rs"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
description= "Library for writing ReqIF files"
homepage= "https://github.com/invap/reqif-rs"
repository= "https://github.com/invap/reqif-rs"
readme= "README.md"
keywords=["ReqIf","Requirements", "Serialization"]
authors= ["Juan Ignacio Vaccarezza <jivaccarezza@invap.com.ar>"]
documentation="https://docs.rs/reqif-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = "0.10.0"
yaserde_derive = "0.10.0"
chrono = "0.4.37"
anyhow = "1.0.82"
